feat: parse csv to object and save to db